<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlach</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gift_viewer">"Gift Viewer "</string>
    <string name="hello_world">Hello world!</string>


    <string name="save">Save</string>
    <string name="gift_chain">Gift Chain</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="select_account">Select your account</string>


    <string name="searchGift">Search your Gift</string>

    <string name="alert_need_photo">A photo need to be insert</string>

    <string name="getting_location">Getting location</string>
    <string name="location_found">Location Found</string>
    <string name="view_location">View Location on Maps</string>
    <string name="no_location">This Gift has not any location</string>

    <string name="deleteGift">Delete Gift</string>

    <string name="top_users">Top Users</string>

    <string name="specialInfo">Special Info</string>

</resources>
