<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.vssnake.potlach.main.activities.view.GiftViewerActivity"
                android:elevation="4dp">
    <!-- A CardView that contains a TextView -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                card_view:cardCornerRadius="10dp"
                android:elevation="6dp"
                android:layout_marginTop="40dp">

                <com.vssnake.potlach.main.views.AdvancedImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gc_photo"
                    app:aiv_title="Turururur"
                    app:aiv_mode="0"
                    android:layout_below="@+id/card_view"
                    android:layout_centerHorizontal="true"/>

            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title"
                    android:id="@+id/textView"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="true"
                    android:layout_above="@+id/textView2"
                    android:gravity="left"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gc_title"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"
                    android:maxLength="40"
                    android:layout_toRightOf="@+id/textView"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gc_description"
                    android:layout_toEndOf="@+id/textView"
                    android:inputType="textMultiLine"
                    android:layout_below="@+id/textView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:maxLength="500"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/description"
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:layout_below="@+id/gc_title"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                android:elevation="6dp"
                android:id="@+id/linearLayout"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/gc_gift_chain_check"
                            android:buttonTint="@android:color/black"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gift_chain"
                            android:id="@+id/gc_gift_chain_btn"

                            android:layout_below="@+id/textView2"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/gc_save_btn"
                    android:layout_below="@+id/gc_description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/gc_descrip_left"
                    android:layout_toEndOf="@+id/linearLayout"
                    android:text="500/500"
                    android:layout_below="@+id/gc_description"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignLeft="@+id/gc_save_btn"
                    android:layout_alignStart="@+id/gc_save_btn"
                    android:gravity="center_vertical|right"
                    android:layout_marginTop="-2dp"/>


            </RelativeLayout>


        </LinearLayout>
        </ScrollView>


</RelativeLayout>
